Mostly finished reorganising benchmark suite makefiles.

--- a/benchmarks/sl/Makefile
+++ b/benchmarks/sl/Makefile
@@ -1,11 +1,9 @@
 CMD := $(ROOT)/_build/src/seplog/sl_prove.native
 export CMD
 
-TARGETS:= base atva-2014 songbird
+TARGETS:=$(filter-out Makefile,$(wildcard *))
 .PHONY: all $(TARGETS)
-
 all: $(TARGETS)
 
 $(TARGETS): %:
-		@echo "Called with $@"
 		$(MAKE) -C $@
