Added latest benchmarks from Songbird test suite; changes to benchmark Makefiles to allow for Cyclist to be installed in a path containing spaces.

--- a/benchmarks/sl/atva-2014/Makefile
+++ b/benchmarks/sl/atva-2014/Makefile
@@ -1,5 +1,5 @@
 TESTS:= $(sort $(wildcard *.tst))
-DEFS := $(ROOT)/examples/IosifEtAl-ATVA2014.defs
+DEFS := "$(ROOT)/examples/IosifEtAl-ATVA2014.defs"
 
 .PHONY: all $(TESTS)
 all: $(TESTS)
