Fixed mparser-pcre depencies
The dune build failed due to new mparser structure.
The mparser project moved to the dune build system and moved
the pcre into a seperate package.
See commit 56d3c9 in mparser.

--- a/src/lib/dune
+++ b/src/lib/dune
@@ -1,5 +1,5 @@
 (library
  (name lib)
  (public_name cyclist.lib)
- (libraries mparser.pcre unix hashset hashcons)
+ (libraries mparser-pcre unix hashset hashcons)
  (modules (:standard \ lru)))
