--- a/src/while/dune
+++ b/src/while/dune
@@ -1,7 +1,7 @@
 (library
  (name while)
  (public_name cyclist.while)
- (libraries lib generic seplog mparser.pcre)
+ (libraries lib generic seplog mparser-pcre)
  (modules
    (:standard \ 
         abduce
