--- a/src/concseplog/dune
+++ b/src/concseplog/dune
@@ -1,4 +1,33 @@
-(executable
-  (name prove)
-  (public_name concseplog_prove)
-  (libraries lib generic while ocamlgraph str))
+(library 
+ (name seplog)
+ (public_name cyclist.seplog)
+ (libraries lib generic mparser.pcre)
+ (modules
+   (:standard 
+      \ slinit
+        disprove
+        modelcheck
+        prove
+        satcheck
+        satexpgen)))
+
+(executables
+ (names
+   prove disprove modelcheck satcheck satexpgen)
+ (public_names
+   sl_prove sl_disprove sl_modelcheck sl_satcheck sl_satexpgen)
+ (modules
+   prove disprove modelcheck satcheck satexpgen)
+ (libraries lib generic seplog))
+
+(toplevel
+ (name sltop)
+ (libraries lib generic seplog))
+
+; (executable
+;  (name        sltop)
+;  (public_name sl.top)
+;  (libraries  compiler-libs.toplevel lib generic seplog)
+;  (modules sltop)
+;  (link_flags (-linkall))
+; (modes      byte))
