--- a/src/concprocedure/dune
+++ b/src/concprocedure/dune
@@ -1,4 +1,4 @@
 (executable
   (name prove)
   (public_name concseplog_prove)
-  (libraries lib generic while ocamlgraph str))
+  (libraries lib generic while concseplog ocamlgraph str))
