--- a/benchmarks/sl/songbird/Makefile
+++ b/benchmarks/sl/songbird/Makefile
@@ -8,5 +8,5 @@ $(TESTS): %.tst:
 	@echo "$@"
 	-@while read -r SEQ; do \
 		echo -n "\t"; \
-		$(CMD) -D $(DEFS) $(TST_OPTS) -S "$$SEQ" || true ;\
+		(cd "$(ROOT)" && dune exec $(CMD) -- -D $(DEFS) $(TST_OPTS) -S "$$SEQ" || true) ;\
 	done < "$@"
