--- a/src/seplog/dune
+++ b/src/seplog/dune
@@ -1,7 +1,7 @@
 (library 
  (name seplog)
  (public_name cyclist.seplog)
- (libraries lib generic mparser.pcre)
+ (libraries lib generic mparser mparser.pcre zarith)
  (modules
    (:standard 
       \ slinit
@@ -22,7 +22,7 @@
 
 (toplevel
  (name sltop)
- (libraries lib generic seplog))
+ (libraries lib generic seplog zarith))
 
 ; (executable
 ;  (name        sltop)
