--- a/src/generic/dune
+++ b/src/generic/dune
@@ -8,7 +8,9 @@
  (modules_without_implementation sequent)
  (foreign_stubs
   (language c)
-  (names proof proof_aut trace soundness)
+  (names proof
+    proof_aut trace buchi_soundness
+    types sloped_relation heighted_graph relational_soundness)
   (flags :standard -xc++ -std=c++1y (:include c_flags.sexp))
   (include_dirs %{ocaml_where}/caml))
  (c_library_flags (:include c_library_flags.sexp) -lstdc++))
