--- a/src/seplog/dune
+++ b/src/seplog/dune
@@ -1,7 +1,7 @@
 (library 
  (name seplog)
  (public_name cyclist.seplog)
- (libraries lib generic mparser mparser.pcre zarith ounit2)
+ (libraries lib generic mparser mparser.pcre zarith)
  (modules
    (:standard 
       \ slinit
@@ -9,8 +9,8 @@
         modelcheck
         prove
         satcheck
-        satexpgen
-        pheap_test)))
+        satexpgen  )))
+      
 
 (executables
  (names
@@ -26,20 +26,8 @@
  (libraries lib generic seplog zarith))
  
 
-;(executable
-; (name pheap_test) 
-; (modules pheap_test)
-; (libraries oUnit lib generic seplog zarith))
-
-(tests
- (names pheap_test)
- (modules pheap_test)
- (libraries oUnit lib generic seplog zarith)) 
-
-; (executable
-;  (name        sltop)
-;  (public_name sl.top)
-;  (libraries  compiler-libs.toplevel lib generic seplog)
-;  (modules sltop)
-;  (link_flags (-linkall))
-; (modes      byte))
+; (tests
+;  (names pheap_test)
+;  (modules pheap_test)
+;  (libraries oUnit lib generic seplog zarith)) 
+ 
