--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -28,3 +28,6 @@ tests: soundness
 	TEST="graph_5"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [   $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
 	TEST="graph_6"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
 	TEST="graph_7"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
+	TEST="graph_8"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
+	TEST="graph_8a"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
+	TEST="graph_8b"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
