Added more test cases.

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -31,3 +31,6 @@ tests: soundness
 	TEST="graph_8"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
 	TEST="graph_8a"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
 	TEST="graph_8b"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [   $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
+	TEST="graph_9"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
+	TEST="graph_9a"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
+	TEST="graph_9b"; echo "TEST: $$TEST"; ($(TEST_EXE) $$TEST; if [ ! $$? -eq 0 ]; then echo "TEST PASSED"; else echo "TEST FAILED"; fi; exit 0)
